--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@
     <br />
     <h2 id="dn">ما هي اغلى عملة في العالم ؟</h2>
     <a href="#pp">
-      <button onclick="right()">الدينار الكويتي </buuton>
+      <button>
+        الدينار الكويتي 
+      </button>
     </a>
     <a href="#pp">
       <button onclick="wrong()">الدولار المريكي</button>
