--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <br />
     <h2 id="dn">ما هي اغلى عملة في العالم ؟</h2>
     <a href="#pp">
-      <button>
+      <button onclick="right()">
         الدينار الكويتي 
       </button>
     </a>
