--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
     <br />
     <br />
     <h2 id="ll">ما هو الفريق الذي يحمل الرقم القياسي لأكبر عدد من بطولات العالم في الفورمولا 1 ؟</h2>
-    <a href="#">
+    <a href="#tn">
       <button onclick="right()">فيراري </button>
     </a>
-    <a href="#">
+    <a href="#tn">
       <button onclick="wrong()">ريد بول</button>
     </a>
-    <a href="#">
+    <a href="#tn">
       <button onclick="wrong()">مرسيدس </button>
     </a>
     <br />
@@ -179,7 +179,7 @@
     <hr />
     <br />
     <br />
-    <p>أعزائي الزوار الكرام،  
+    <p id="tn>أعزائي الزوار الكرام،  
 أشكركم من كل قلبي على زيارة موقعي، فحضوركم يعني لي الكثير. أتمنى أن تكونوا قد وجدتم ما يفيدكم ويلهمكم، وأعدكم بالمزيد من المحتوى القيّم. شكرًا لكونكم جزءًا من هذه الرحلة، وأتمنى لكم دوام التوفيق والسعادة.  </p>
 <br />
 <br />
