--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     <hr />
     <br />
     <br />
-    <p id="tn>أعزائي الزوار الكرام،  
+    <p id="tn">أعزائي الزوار الكرام،  
 أشكركم من كل قلبي على زيارة موقعي، فحضوركم يعني لي الكثير. أتمنى أن تكونوا قد وجدتم ما يفيدكم ويلهمكم، وأعدكم بالمزيد من المحتوى القيّم. شكرًا لكونكم جزءًا من هذه الرحلة، وأتمنى لكم دوام التوفيق والسعادة.  </p>
 <br />
 <br />
